Updating these files

--- a/Calclavia.cfg
+++ b/Calclavia.cfg
@@ -1,10 +1,10 @@
 # Configuration file
 
 ####################
-# """"""""""""""""""""""""""""""""""""""""""""""""""""""allow load items""""""""""""""""""""""""""""""""""""""""""""""""""""""
+# """"""""""""""""""""""""""""""""""""""""""""""""""""""""allow load items""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 ####################
 
-"""""""""""""""""""""""""""""""""""""""""""""""""""""""allow load items""""""""""""""""""""""""""""""""""""""""""""""""""""""" {
+"""""""""""""""""""""""""""""""""""""""""""""""""""""""""allow load items""""""""""""""""""""""""""""""""""""""""""""""""""""""""" {
     B:blockOreCopper=true
     B:blockOreTin=true
     B:itemCircuitAdvanced=true
