Potentially harmful spells for griefing.
Disabled the following:

Banish Rain- Server Weather control.

Create Water- Create a water source block.

Daylight- Set the server time to day.

Divine Intervention- teleports from any other world to the main world.  It creates an air pocket where ever you end up.  Can be used to grief our buildings.

Entangle- spawns "leaves"  player grief.

Moonrise- Set server time to night.

ManaDrain- Used to grief other players.

Storm- Make it rain server wide.

Wizards Autumn- Strips behind leaves from the trees, leaving only wood.


There could be more, but these are bad.

--- a/AM2/SkillConf.cfg
+++ b/AM2/SkillConf.cfg
@@ -13,7 +13,7 @@ general {
     B:AstralDistortion=true
     B:Attract=true
     B:AugmentedCasting=true
-    B:BanishRain=true
+    B:BanishRain=false
     B:Beam=true
     B:Binding=true
     B:Blind=true
@@ -30,18 +30,18 @@ general {
     B:Contingency_Fall=true
     B:Contingency_Fire=true
     B:Contingency_Health=true
-    B:CreateWater=true
+    B:CreateWater=false
     B:Damage=true
-    B:Daylight=true
+    B:Daylight=False
     B:Dig=false
     B:Disarm=true
     B:Dispel=true
-    B:DivineIntervention=true
+    B:DivineIntervention=False
     B:Drought=true
     B:Drown=true
     B:Duration=true
     B:EnderIntervention=true
-    B:Entangle=true
+    B:Entangle=false
     B:ExtraSummon=true
     B:FallingStar=true
     B:FireDamage=true
@@ -78,7 +78,7 @@ general {
     B:ManaRegenIII=true
     B:ManaShield=true
     B:Mark=true
-    B:Moonrise=true
+    B:Moonrise=false
     B:NightVision=true
     B:PhysicalDamage=true
     B:Piercing=true
@@ -102,7 +102,7 @@ general {
     B:Solar=true
     B:Speed=true
     B:SpellMotion=true
-    B:Storm=true
+    B:Storm=false
     B:Summon=true
     B:SwiftSwim=true
     B:TargetNonSolid=true
@@ -114,7 +114,7 @@ general {
     B:Wall=true
     B:WaterBreathing=true
     B:WateryGrave=true
-    B:WizardsAutumn=true
+    B:WizardsAutumn=False
     B:Zone=true
 }
 
